--- a/code/visualizations/geo_vis.ipynb
+++ b/code/visualizations/geo_vis.ipynb
@@ -310,7 +310,7 @@
     "\n",
     "grouped_geo[grouped_geo[\"Type\"] != 1].plot(ax=ax, column=\"Type\", marker=\"s\", markersize=8, zorder=20, cmap=cmap)\n",
     "ax.legend(handles=patches, title=\"Label\")\n",
-    "plt.title(\"2003 sources and sinks average\")\n",
+    "plt.title(\"2003 sources and sinks locations\")\n",
     "\n",
     "plt.savefig('images/figure11.png', bbox_inches =\"tight\")\n",
     "plt.show()"
